# WindowsLanguageWidget

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: LangWidget.ahk  i18n.js  index.html  settings.html  settings.js  widget.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hook.rs  keyboard.rs  main.rs  toggle.rs
